@@ -1,3 +1,6 @@
+4516.	[bug]		isc_socketmgr_renderjson was missing from the
+			windows build. [RT #43602]
+
 4515.	[port]		FreeBSD: Find readline headers when they are in
 			edit/readline/ instead of readline/. [RT #43658]
 
